plugins {
    id 'java'
    id 'maven'
    id 'maven-publish'
    id 'checkstyle'
}

repositories {
    mavenCentral()
    mavenLocal()
}

apply from: '../opencadc.gradle'

sourceCompatibility = 1.8

group = 'org.opencadc'

version = '1.3.5'

description = 'OpenCADC REST server library'
def git_url = 'https://github.com/opencadc/core'

dependencies {
    compile 'commons-fileupload:commons-fileupload:1.4'
    compile 'log4j:log4j:1.2.17'
    compile 'javax.servlet:javax.servlet-api:3.1.0'
    compile 'org.opencadc:cadc-util:[1.4,2.0)'
    compile 'org.opencadc:cadc-registry:[1.5,)'

    testCompile 'junit:junit:4.13'
    testCompile 'org.easymock:easymock:3.6'
}
